--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
 
 			<div class="container">
-				<a class="navbar-brand" href="index.html">Furni<span>.</span></a>
+				<a class="navbar-brand" href="index.html"><img src="images\module-logo.png" class="img-logo"></a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -43,7 +43,6 @@
 						</li>
 						<li><a class="nav-link" href="shop.html">Shop</a></li>
 						<li><a class="nav-link" href="about.html">About us</a></li>
-						<li><a class="nav-link" href="services.html">Services</a></li>
 						<li><a class="nav-link" href="blog.html">Blog</a></li>
 						<li class="active"><a class="nav-link" href="contact.html">Contact us</a></li>
 					</ul>
@@ -64,9 +63,9 @@
 					<div class="row justify-content-between">
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
-								<h1>Contact</h1>
-								<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
-								<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
+								<h1>About <span clsas="d-block">Our Brand</span></h1>
+								<p class="mb-4">At MODULE, we believe furniture is more than form and function — it's a reflection of your lifestyle. Each piece we craft is made to turn everyday moments into lasting memories, blending comfort, design, and soul.</p>
+								<p><a href="shop.html" class="btn btn-secondary me-2">Shop Now</a><a href="shop.html" class="btn btn-white-outline">Explore</a></p>
 							</div>
 						</div>
 						<div class="col-lg-7">
@@ -78,7 +77,6 @@
 				</div>
 			</div>
 		<!-- End Hero Section -->
-
 		
 		<!-- Start Contact Form -->
 		<div class="untree_co-section">
