--- a/sofas.html
+++ b/sofas.html
@@ -43,6 +43,7 @@
 						</li>
 						<li class="active"><a class="nav-link" href="shop.html">Shop</a></li>
 						<li><a class="nav-link" href="about.html">About us</a></li>
+						<li><a class="nav-link" href="services.html">Services</a></li>
 						<li><a class="nav-link" href="blog.html">Blog</a></li>
 						<li><a class="nav-link" href="contact.html">Contact us</a></li>
 					</ul>
@@ -56,6 +57,8 @@
 				
 		</nav>
 		<!-- End Header/Navigation -->
+
+		<!-- Category Tabs -->
 <div class="bg-light py-2 border-bottom">
   <div class="container d-flex justify-content-between">
     <div>
@@ -73,77 +76,57 @@
   </div>
 </div>
 
-		
+<!-- Filters & Sort -->
+<div class="container py-4">
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <div class="d-flex flex-wrap gap-2">
+      <select class="form-select form-select-sm" style="width: 150px;"><option>Price Range</option></select>
+      <select class="form-select form-select-sm" style="width: 150px;"><option>Brand</option></select>
+      <select class="form-select form-select-sm" style="width: 150px;"><option>Material</option></select>
+      <select class="form-select form-select-sm" style="width: 150px;"><option>Upholstery</option></select>
+      <select class="form-select form-select-sm" style="width: 150px;"><option>Design</option></select>
+    </div>
+    <div class="d-flex align-items-center gap-2">
+      <button class="btn btn-outline-secondary btn-sm"><i class="bi bi-grid-3x3-gap"></i></button>
+      <select class="form-select form-select-sm" style="width: 150px;">
+        <option>Recommended</option>
+        <option>Price: Low to High</option>
+        <option>Price: High to Low</option>
+      </select>
+    </div>
+  </div>
 
-		<div class="untree_co-section product-section before-footer-section">
-		    <div class="container">
-		      	<div class="row">
-
-		      		<!-- Start Column 1 -->
-					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Sofa</h3>
-
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
-						</a>
-					</div> 
-					<!-- End Column 1 -->
-						
-					<!-- Start Column 2 -->
-					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="images/product-1.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Table</h3
-
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
-						</a>
-					</div> 
-					<!-- End Column 2 -->
-
-					<!-- Start Column 3 -->
-					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="shop copy.html">
-							<img src="images/product-2.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Chair</h3>
-
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
-						</a>
-					</div>
-					<!-- End Column 3 -->
-
-					<!-- Start Column 4 -->
-					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Cot</h3>
-
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
-						</a>
-					</div>
-					<!-- End Column 4 -->
-
-		      	</div>
-		    </div>
-		</div>
+  <!-- Product Grid -->
+  <div class="row g-4">
+    <!-- Product Card -->
+    <div class="col-md-4 col-lg-3">
+      <div class="card border-0 shadow-sm h-100">
+        <div class="position-relative">
+          <a href="shop copy 2.html"><img src="images/post-1.jpg" class="card-img-top" alt="Product"></a>
+          <button class="btn btn-light position-absolute top-0 end-0 m-2 rounded-circle shadow-sm">
+            ❤️
+          </button>
+        </div>
+        <div class="card-body">
+          <p class="text-muted small mb-1">SKU: 10MD082-S(HG)</p>
+          <h5 class="card-title fs-6">Wooden 1-Seater Sofa</h5>
+          <p class="mb-1">
+            <span class="fw-bold">₹19,200</span>
+            <del class="text-muted small">₹24,000</del>
+          </p>
+          <p class="text-success small mb-1">Save ₹4,800 (20% OFF)</p>
+          <p class="text-muted small">3+ color options</p>
+        </div>
+      </div>
+    </div>
+    <!-- Repeat for more products... -->
+  </div>
+</div>
 
 
 		<!-- Start Footer Section -->
 		<footer class="footer-section">
 			<div class="container relative">
-
-				<div class="sofa-img">
-					<img src="images/sofa.png" alt="Image" class="img-fluid">
-				</div>
-
 				<div class="row">
 					<div class="col-lg-8">
 						<div class="subscription-form">
