--- a/contact.html
+++ b/contact.html
@@ -176,7 +176,7 @@
 		<!-- Start Footer Section -->
 		<footer class="footer-section">
 			<div class="container relative">
-
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.5727017710874!2d76.35405307484528!3d9.969463890134424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0873c2157fd857%3A0x41607786bbad0e2c!2sModule%20Furniture%20%26%20Interiors!5e0!3m2!1sen!2sin!4v1755014288209!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				<div class="sofa-img">
 					<img src="images/sofa.png" alt="Image" class="img-fluid">
 				</div>
@@ -211,7 +211,7 @@
 
 						<ul class="list-unstyled custom-social">
 							<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
-							<li><a href="#"><span class="fa fa-brands fa-twitter"></span></a></li>
+							<li><a href="https://wa.me/918129718086?text=I'm%20interested%20in%20buying%20some%20furniture"><span class="fa fa-brands fa-whatsapp"></span></a></li>
 							<li><a href="#"><span class="fa fa-brands fa-instagram"></span></a></li>
 							<li><a href="#"><span class="fa fa-brands fa-linkedin"></span></a></li>
 						</ul>
